--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Symfony 4{% endblock %}</title>
          <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+         <link rel="stylesheet" href="{{ asset('build/css/paginate.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body class="animsition">
