--- a/templates/blog-detail.html.twig
+++ b/templates/blog-detail.html.twig
@@ -1,206 +1,117 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout-blog.html.twig' %}
 
-{% block body %}
-
-<!-- Title page -->
-<section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('../images/bg-02.jpg');">
-	<h2 class="ltext-105 cl0 txt-center">
-		Blog
-	</h2>
-</section>
-
-<!-- breadcrumb -->
-<div class="container">
-	<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-		<a href="{{ path('homepage')}}" class="stext-109 cl8 hov-cl1 trans-04">
-			Home
-			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
-		</a>
-
-		<a href="{{ path('blog')}}" class="stext-109 cl8 hov-cl1 trans-04">
-			Blog
-			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
-		</a>
-
-		<span class="stext-109 cl4">
-			{{ blog.title }}
-		</span>
-	</div>
-</div>
-
-
-<!-- Content page -->
-<section class="bg0 p-t-52 p-b-20">
+{% block breadcrumb %}
+	<!-- breadcrumb -->
 	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-lg-9 p-b-80">
-				<div class="p-r-45 p-r-0-lg">
-					<!--  -->
-					<div class="wrap-pic-w how-pos5-parent">
-						<img src="{% path blog.media, 'big' %}" alt="IMG-BLOG">
+		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+			<a href="{{ path('homepage')}}" class="stext-109 cl8 hov-cl1 trans-04">
+				Home
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
 
-						<div class="flex-col-c-m size-123 bg9 how-pos5">
-							<span class="ltext-107 cl2 txt-center">
-								{{ blog.createdAt|date("d") }}
-							</span>
+			<a href="{{ path('blog')}}" class="stext-109 cl8 hov-cl1 trans-04">
+				Blog
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
 
-							<span class="stext-109 cl3 txt-center">
-								{{ blog.createdAt|date("M/Y") }}
-							</span>
-						</div>
-					</div>
-
-					<div class="p-t-32">
-						<span class="flex-w flex-m stext-111 cl2 p-b-19">
-							<span>
-								<span class="cl4">By</span> Admin  
-								<span class="cl12 m-l-4 m-r-6">|</span>
-							</span>
-
-							<span>
-								{{ blog.createdAt|date("d") }} {{ blog.createdAt|date("M") }}, {{ blog.createdAt|date("Y") }}
-								{# <span class="cl12 m-l-4 m-r-6">|</span> #}
-							</span>
-
-							{# <span>
-								8 Comments
-							</span> #}
-						</span>
-
-						<h4 class="ltext-109 cl2 p-b-28">
-							{{ blog.title }}
-						</h4>
-
-						<p class="stext-117 cl6 p-b-26">
-							{{ blog.content }}
-						</p>
-					</div>
-
-					<div class="flex-w flex-t p-t-16">
-						<span class="size-216 stext-116 cl8 p-t-4">
-							Tags
-						</span>
-
-						<div class="flex-w size-217">
-							{% for tag in blog.tags %}
-						        <a href="#" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									{{ tag.name }}
-								</a>
-						    {% endfor %}
-						</div>
-					</div>
-
-					<!--  -->
-{# 					<div class="p-t-40">
-						<h5 class="mtext-113 cl2 p-b-12">
-							Leave a Comment
-						</h5>
-
-						<p class="stext-107 cl6 p-b-40">
-							Your email address will not be published. Required fields are marked *
-						</p>
-
-						<form>
-							<div class="bor19 m-b-20">
-								<textarea class="stext-111 cl2 plh3 size-124 p-lr-18 p-tb-15" name="cmt" placeholder="Comment..."></textarea>
-							</div>
-
-							<div class="bor19 size-218 m-b-20">
-								<input class="stext-111 cl2 plh3 size-116 p-lr-18" type="text" name="name" placeholder="Name *">
-							</div>
-
-							<div class="bor19 size-218 m-b-20">
-								<input class="stext-111 cl2 plh3 size-116 p-lr-18" type="text" name="email" placeholder="Email *">
-							</div>
-
-							<div class="bor19 size-218 m-b-30">
-								<input class="stext-111 cl2 plh3 size-116 p-lr-18" type="text" name="web" placeholder="Website">
-							</div>
-
-							<button class="flex-c-m stext-101 cl0 size-125 bg3 bor2 hov-btn3 p-lr-15 trans-04">
-								Post Comment
-							</button>
-						</form>
-					</div> #}
-				</div>
-			</div>
-
-			<div class="col-md-4 col-lg-3 p-b-80">
-				<div class="side-menu">
-
-					<div class="p-t-50">
-						<h4 class="mtext-112 cl2 p-b-27">
-							Tags
-						</h4>
-
-						<div class="flex-w m-r--5">
-							{% for tag in tags %}
-						        <a href="{{ path('blog', {tag: tag.id}) }}" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									{{ tag.name }}
-								</a>
-						    {% endfor %}
-						</div>
-					</div>
-
-					<div class="p-t-65">
-						<h4 class="mtext-112 cl2 p-b-33">
-							Last Products
-						</h4>
-
-						<ul>
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="../images/product-min-01.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										White Shirt With Pleat Detail Back
-									</a>
-
-									<span class="stext-116 cl6 p-t-20">
-										$19.00
-									</span>
-								</div>
-							</li>
-
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="../images/product-min-02.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										Converse All Star Hi Black Canvas
-									</a>
-
-									<span class="stext-116 cl6 p-t-20">
-										$39.00
-									</span>
-								</div>
-							</li>
-
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="../images/product-min-03.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										Nixon Porter Leather Watch In Tan
-									</a>
-
-									<span class="stext-116 cl6 p-t-20">
-										$17.00
-									</span>
-								</div>
-							</li>
-						</ul>
-					</div>
-
-				</div>
-			</div>
+			<span class="stext-109 cl4">
+				{{ blog.title }}
+			</span>
 		</div>
 	</div>
-</section>
+{% endblock %}
+
+{% block blog %}
+
+<div class="p-r-45 p-r-0-lg">
+	<!--  -->
+	<div class="wrap-pic-w how-pos5-parent">
+		<img src="{% path blog.media, 'big' %}" alt="IMG-BLOG">
+
+		<div class="flex-col-c-m size-123 bg9 how-pos5">
+			<span class="ltext-107 cl2 txt-center">
+				{{ blog.createdAt|date("d") }}
+			</span>
+
+			<span class="stext-109 cl3 txt-center">
+				{{ blog.createdAt|date("M/Y") }}
+			</span>
+		</div>
+	</div>
+
+	<div class="p-t-32">
+		<span class="flex-w flex-m stext-111 cl2 p-b-19">
+			<span>
+				<span class="cl4">By</span> Admin  
+				<span class="cl12 m-l-4 m-r-6">|</span>
+			</span>
+
+			<span>
+				{{ blog.createdAt|date("d") }} {{ blog.createdAt|date("M") }}, {{ blog.createdAt|date("Y") }}
+				{# <span class="cl12 m-l-4 m-r-6">|</span> #}
+			</span>
+
+			{# <span>
+				8 Comments
+			</span> #}
+		</span>
+
+		<h4 class="ltext-109 cl2 p-b-28">
+			{{ blog.title }}
+		</h4>
+
+		<p class="stext-117 cl6 p-b-26">
+			{{ blog.content|raw }}
+		</p>
+	</div>
+
+	<div class="flex-w flex-t p-t-16">
+		<span class="size-216 stext-116 cl8 p-t-4">
+			Tags
+		</span>
+
+		<div class="flex-w size-217">
+			{% for tag in blog.tags %}
+		        <a href="{{ path('blog', {tag: tag.id}) }}" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
+					{{ tag.name }}
+				</a>
+		    {% endfor %}
+		</div>
+	</div>
+
+<!-- COMMENT -->
+{# <div class="p-t-40">
+	<h5 class="mtext-113 cl2 p-b-12">
+		Leave a Comment
+	</h5>
+
+	<p class="stext-107 cl6 p-b-40">
+		Your email address will not be published. Required fields are marked *
+	</p>
+
+	<form>
+		<div class="bor19 m-b-20">
+			<textarea class="stext-111 cl2 plh3 size-124 p-lr-18 p-tb-15" name="cmt" placeholder="Comment..."></textarea>
+		</div>
+
+		<div class="bor19 size-218 m-b-20">
+			<input class="stext-111 cl2 plh3 size-116 p-lr-18" type="text" name="name" placeholder="Name *">
+		</div>
+
+		<div class="bor19 size-218 m-b-20">
+			<input class="stext-111 cl2 plh3 size-116 p-lr-18" type="text" name="email" placeholder="Email *">
+		</div>
+
+		<div class="bor19 size-218 m-b-30">
+			<input class="stext-111 cl2 plh3 size-116 p-lr-18" type="text" name="web" placeholder="Website">
+		</div>
+
+		<button class="flex-c-m stext-101 cl0 size-125 bg3 bor2 hov-btn3 p-lr-15 trans-04">
+			Post Comment
+		</button>
+	</form>
+</div> #}
+
+	</div>
+</div>
 {% endblock %}
