--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -1,159 +1,67 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout-blog.html.twig' %}
 
-{% block body %}
+{% block blog %}
 
-<!-- Title page -->
-<section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('images/bg-02.jpg');">
-	<h2 class="ltext-105 cl0 txt-center">
-		Blog
-	</h2>
-</section>	
+<div class="p-r-45 p-r-0-lg">
+	{% for blog in blogs %}
+        <div class="p-b-63">
+			<a href="{{ path('blog_detail', {id : blog.id })}}" class="hov-img0 how-pos5-parent">
+				<img src="{% path blog.media, 'big' %}" alt="IMG-BLOG">
 
-
-<!-- Content page -->
-<section class="bg0 p-t-62 p-b-60">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-lg-9 p-b-80">
-				<div class="p-r-45 p-r-0-lg">
-					{% for blog in blogs %}
-				        <div class="p-b-63">
-							<a href="{{ path('blog_detail', {id : blog.id })}}" class="hov-img0 how-pos5-parent">
-								<img src="{% path blog.media, 'big' %}" alt="IMG-BLOG">
-
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										{{ blog.createdAt|date("d") }}
-									</span>
-									<span class="stext-109 cl3 txt-center">
-										{{ blog.createdAt|date("M/Y") }}
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="{{ path('blog_detail', {id : 1})}}" class="ltext-108 cl2 hov-cl1 trans-04">
-										{{ blog.title }}
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									{{ blog.content|length > 50 ? blog.content|slice(0, 200) ~ ' ...' : blog.content  }}
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-									<span class="flex-w flex-m stext-111 cl2 p-r-30 m-tb-10">
-										<span>
-											<span class="cl4">By</span> Admin  
-											<span class="cl12 m-l-4 m-r-6">|</span>
-										</span>
-
-										<span>
-											{% for tag in blog.tags %}
-												{{ tag }} 
-											{% endfor %}  
-											{# <span class="cl12 m-l-4 m-r-6">|</span> #}
-										</span>
-
-										{# <span>
-											8 Comments
-										</span> #}
-									</span>
-
-									<a href="{{ path('blog_detail', {id : blog.id})}}" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
-							</div>
-						</div>
-				    {% endfor %}
-
-					<!-- Pagination -->
-					<div class="flex-l-m flex-w w-full p-t-10 m-lr--7 paginate-container">
-						{{ pagerfanta(pager, 'twitter_bootstrap') }}
-					</div>
+				<div class="flex-col-c-m size-123 bg9 how-pos5">
+					<span class="ltext-107 cl2 txt-center">
+						{{ blog.createdAt|date("d") }}
+					</span>
+					<span class="stext-109 cl3 txt-center">
+						{{ blog.createdAt|date("M/Y") }}
+					</span>
 				</div>
-			</div>
+			</a>
 
-			<div class="col-md-4 col-lg-3 p-b-80">
-				<div class="side-menu">
-					
-					<div class="p-t-50">
-						<h4 class="mtext-112 cl2 p-b-27">
-							Tags
-						</h4>
+			<div class="p-t-32">
+				<h4 class="p-b-15">
+					<a href="{{ path('blog_detail', {id : blog.id})}}" class="ltext-108 cl2 hov-cl1 trans-04">
+						{{ blog.title }}
+					</a>
+				</h4>
 
-						<div class="flex-w m-r--5">
-							{% for tag in tags %}
-						        <a href="{{ path('blog', {tag: tag.id}) }}" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									{{ tag.name }}
-								</a>
-						    {% endfor %}
-						</div>
-					</div>
+				<p class="stext-117 cl6">
+					{{ (blog.content|length > 50 ? blog.content|slice(0, 150) ~ ' ...' : blog.content)|raw  }}
+				</p>
 
-					<div class="p-t-65">
-						<h4 class="mtext-112 cl2 p-b-33">
-							Last Products
-						</h4>
+				<div class="flex-w flex-sb-m p-t-18">
+					<span class="flex-w flex-m stext-111 cl2 p-r-30 m-tb-10">
+						<span>
+							<span class="cl4">By</span> Admin  
+							<span class="cl12 m-l-4 m-r-6">|</span>
+						</span>
 
-						<ul>
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="images/product-min-01.jpg" alt="PRODUCT">
-								</a>
+						<span>
+							{% for tag in blog.tags %}
+								{{ tag }} 
+							{% endfor %}  
+							{# <span class="cl12 m-l-4 m-r-6">|</span> #}
+						</span>
 
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										White Shirt With Pleat Detail Back
-									</a>
+						{# <span>
+							8 Comments
+						</span> #}
+					</span>
 
-									<span class="stext-116 cl6 p-t-20">
-										$19.00
-									</span>
-								</div>
-							</li>
+					<a href="{{ path('blog_detail', {id : blog.id})}}" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
+						Continue Reading
 
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="images/product-min-02.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										Converse All Star Hi Black Canvas
-									</a>
-
-									<span class="stext-116 cl6 p-t-20">
-										$39.00
-									</span>
-								</div>
-							</li>
-
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="images/product-min-03.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										Nixon Porter Leather Watch In Tan
-									</a>
-
-									<span class="stext-116 cl6 p-t-20">
-										$17.00
-									</span>
-								</div>
-							</li>
-						</ul>
-					</div>
-
+						<i class="fa fa-long-arrow-right m-l-9"></i>
+					</a>
 				</div>
 			</div>
 		</div>
+    {% endfor %}
+
+	<!-- Pagination -->
+	<div class="flex-l-m flex-w w-full p-t-10 m-lr--7 paginate-container">
+		{{ pagerfanta(pager, 'twitter_bootstrap', { 'omitFirstPage': true}) }}
 	</div>
-</section>	
+
+</div>
 {% endblock %}
