--- a/templates/layout-blog.html.twig
+++ b/templates/layout-blog.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('build/css/blog.css') }}">
+{% endblock %}
+
 {% block body %}
 
 <!-- Title page -->
