--- a/templates/product-detail.html.twig
+++ b/templates/product-detail.html.twig
@@ -5,18 +5,18 @@
 <!-- breadcrumb -->
 <div class="container" style="margin-top: 80px;">
 	<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-		<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
+		<a href="{{ path('homepage') }}" class="stext-109 cl8 hov-cl1 trans-04">
 			Home
 			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 		</a>
 
-		<a href="product.html" class="stext-109 cl8 hov-cl1 trans-04">
-			Men
+		<a href="{{ path('products') }}" class="stext-109 cl8 hov-cl1 trans-04">
+			{{ product.category.name }}
 			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 		</a>
 
 		<span class="stext-109 cl4">
-			Lightweight Jacket
+			{{ product.name }}
 		</span>
 	</div>
 </div>
@@ -33,35 +33,17 @@
 						<div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
 
 						<div class="slick3 gallery-lb">
-							<div class="item-slick3" data-thumb="../images/product-detail-01.jpg">
-								<div class="wrap-pic-w pos-relative">
-									<img src="../images/product-detail-01.jpg" alt="IMG-PRODUCT">
+							{% for img in product.gallery.galleryHasMedias %}
+								<div class="item-slick3" data-thumb="{% path img.media, 'small' %}">
+									<div class="wrap-pic-w pos-relative">
+										<img src="{% path img.media, 'big' %}" alt="{{ product.name }}">
 
-									<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-01.jpg">
-										<i class="fa fa-expand"></i>
-									</a>
+										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="{% path img.media, 'big' %}">
+											<i class="fa fa-expand"></i>
+										</a>
+									</div>
 								</div>
-							</div>
-
-							<div class="item-slick3" data-thumb="../images/product-detail-02.jpg">
-								<div class="wrap-pic-w pos-relative">
-									<img src="../images/product-detail-02.jpg" alt="IMG-PRODUCT">
-
-									<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-02.jpg">
-										<i class="fa fa-expand"></i>
-									</a>
-								</div>
-							</div>
-
-							<div class="item-slick3" data-thumb="../images/product-detail-03.jpg">
-								<div class="wrap-pic-w pos-relative">
-									<img src="../images/product-detail-03.jpg" alt="IMG-PRODUCT">
-
-									<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-03.jpg">
-										<i class="fa fa-expand"></i>
-									</a>
-								</div>
-							</div>
+							{% endfor %}
 						</div>
 					</div>
 				</div>
@@ -70,15 +52,15 @@
 			<div class="col-md-6 col-lg-5 p-b-30">
 				<div class="p-r-50 p-t-5 p-lr-0-lg">
 					<h4 class="mtext-105 cl2 js-name-detail p-b-14">
-						Lightweight Jacket
+						{{ product.name }}
 					</h4>
 
 					<span class="mtext-106 cl2">
-						$58.79
+						${{ product.price }}
 					</span>
 
 					<p class="stext-102 cl3 p-t-23">
-						Nulla eget sem vitae eros pharetra viverra. Nam vitae luctus ligula. Mauris consequat ornare feugiat.
+						{{ product.description|raw }}
 					</p>
 					
 					<!--  -->
