--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -372,7 +372,7 @@
 								{% endif %}
 							{% endfor %}
 
-							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1" data-product="{{ product.id }}">
 								Quick View
 							</a>
 						</div>
@@ -389,10 +389,13 @@
 							</div>
 
 							<div class="block2-txt-child2 flex-r p-t-3">
-								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
+								<a class="btn-addwish-b2 dis-block pos-relative icon-cart js-addcart-detail" data-product="{{ product.id }}">
+									<i class="zmdi zmdi-shopping-cart"></i>
+								</a>
+{# 								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
 									<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
 									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-								</a>
+								</a> #}
 							</div>
 						</div>
 					</div>
@@ -410,4 +413,18 @@
 	</div>
 </section>
 
+{% endblock %}
+
+{% block modal %}
+	<div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
+    	<div class="overlay-modal1 js-hide-modal1"></div>
+	    <div class="container">
+	        <div class="bg0 p-t-60 p-b-30 p-lr-15-lg how-pos3-parent">
+	            <button class="how-pos3 hov3 trans-04 js-hide-modal1">
+	                <img src="images/icons/icon-close.png" alt="CLOSE">
+	            </button>
+				<div class="modal-product"></div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
