--- a/templates/layout-blog.html.twig
+++ b/templates/layout-blog.html.twig
@@ -18,7 +18,7 @@
 <!-- Content page -->
 <section class="bg0 p-t-62 p-b-60">
 	<div class="container">
-		<div class="row">
+		<div class="row layout-blog">
 			<div class="col-md-8 col-lg-9 p-b-80">
 				{% block blog %}{% endblock %}
 			</div>
@@ -46,53 +46,27 @@
 						</h4>
 
 						<ul>
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="images/product-min-01.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										White Shirt With Pleat Detail Back
+							{% for product in products %}
+								<li class="flex-w flex-t p-b-30">
+									<a href="{{ path('product_detail', {id : product.id}) }}" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
+										{% for img in product.gallery.galleryHasMedias %}
+											{% if loop.index == 1 %}
+											    <img src="{% path img.media, 'small' %}" alt="{{ product.name }}">
+											{% endif %}
+										{% endfor %}
 									</a>
 
-									<span class="stext-116 cl6 p-t-20">
-										$19.00
-									</span>
-								</div>
-							</li>
+									<div class="size-215 flex-col-t p-t-8">
+										<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
+											{{ product.name }}
+										</a>
 
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="images/product-min-02.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										Converse All Star Hi Black Canvas
-									</a>
-
-									<span class="stext-116 cl6 p-t-20">
-										$39.00
-									</span>
-								</div>
-							</li>
-
-							<li class="flex-w flex-t p-b-30">
-								<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-									<img src="images/product-min-03.jpg" alt="PRODUCT">
-								</a>
-
-								<div class="size-215 flex-col-t p-t-8">
-									<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-										Nixon Porter Leather Watch In Tan
-									</a>
-
-									<span class="stext-116 cl6 p-t-20">
-										$17.00
-									</span>
-								</div>
-							</li>
+										<span class="stext-116 cl6 p-t-20">
+											${{ product.price }}
+										</span>
+									</div>
+								</li>
+						    {% endfor %}
 						</ul>
 					</div>
 
