--- a/templates/product-detail.html.twig
+++ b/templates/product-detail.html.twig
@@ -116,8 +116,7 @@
 										<i class="fs-16 zmdi zmdi-plus"></i>
 									</div>
 								</div>
-
-								<button class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
+								<button class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail" data-product="{{ product.id }}">
 									Add to cart
 								</button>
 							</div>
