--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -23,3 +23,18 @@
 		color: #007bff;
 	}
 }
+.update-cart-content {
+	justify-content: center;
+}
+.column-5 {
+	position: relative;
+	.remove-item {
+	    position: absolute;
+	    top: 5px;
+	    right: 10px;
+	    color: red;
+	    font-weight: bold;
+	    font-size: 14px;
+	    cursor: pointer;
+	}
+}
