--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -151,11 +151,11 @@
 					 Filter
 				</div>
 
-				<div class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 trans-04 m-tb-4 js-show-search">
+{# 				<div class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 trans-04 m-tb-4 js-show-search">
 					<i class="icon-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-search"></i>
 					<i class="icon-close-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>
 					Search
-				</div>
+				</div> #}
 			</div>
 			
 			<!-- Search product -->
@@ -372,8 +372,9 @@
 								{% endif %}
 							{% endfor %}
 
-							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1" data-product="{{ product.id }}">
-								Quick View
+							<a href="{{ path('product_detail', {id: product.id})}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04" data-product="{{ product.id }}">
+								{# js-show-modal1 #}
+								View
 							</a>
 						</div>
 
