--- a/templates/shoping-cart.html.twig
+++ b/templates/shoping-cart.html.twig
@@ -33,7 +33,7 @@
 							</tr>
 
 							{% for orderProduct in orderProducts %}
-								<tr class="table_row">
+								<tr class="table_row resume-cart">
 									<td class="column-1">
 										<div class="how-itemcart1">
 											{% for img in orderProduct.product.gallery.galleryHasMedias %}
@@ -58,25 +58,28 @@
 											</div>
 										</div>
 									</td>
-									<td class="column-5">$ <span class="total-product-price">{{ orderProduct.product.price * orderProduct.quantity }}</span></td>
+									<td class="column-5">
+										$ <span class="total-product-price">{{ orderProduct.product.price * orderProduct.quantity }}</span>
+										<a class="remove-item" href="{{ path('cart_remove', {id: orderProduct.id})}}">X</a>
+									</td>
 								</tr>
 							{% endfor %} 
 						</table>
 					</div>
 
-					<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-{# 						<div class="flex-w flex-m m-r-20 m-tb-5">
+{# 					<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm update-cart-content">
+						<div class="flex-w flex-m m-r-20 m-tb-5">
 							<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">
 								
 							<div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
 								Apply coupon
 							</div>
-						</div> #}
+						</div>
 
 						<div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
 							Update Cart
 						</div>
-					</div>
+					</div> #}
 				</div>
 			</div>
 
