--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,82 +2,71 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Symfony 4{% endblock %}</title>
+        <title>{% block title %}Ineluctable{% endblock %}</title>
          <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body class="animsition">
-        <!-- Header -->
-        <header>
+    <!-- Header -->
+        <header class="header-v2">
             <!-- Header desktop -->
-            <div class="container-menu-desktop">
-                <!-- Topbar -->
-                <div class="top-bar">
-                    <div class="content-topbar flex-sb-m h-full container">
-                        <div class="left-top-bar">
-                            Free shipping for standard order over $100
-                        </div>
-
-                        <div class="right-top-bar flex-w h-full">
-                            <a href="#" class="flex-c-m trans-04 p-lr-25">
-                                Help & FAQs
-                            </a>
-
-                            <a href="{{ path('fos_user_profile_show') }}" class="flex-c-m trans-04 p-lr-25">
-                                My Account
-                            </a>
-
-                            <a href="#" class="flex-c-m trans-04 p-lr-25">
-                                EN
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
+            <div class="container-menu-desktop trans-03">
                 <div class="wrap-menu-desktop">
-                    <nav class="limiter-menu-desktop container">
+                    <nav class="limiter-menu-desktop p-l-45">
                         
                         <!-- Logo desktop -->       
                         <a href="{{ path('homepage') }}" class="logo">
-                            <img src="{{ asset('images/logo.png') }}" alt="Ineluctable">
+                            <img src="{{ asset('images/logo.png')}}" alt="Ineluctable">
                         </a>
 
                         <!-- Menu desktop -->
                         <div class="menu-desktop">
                             <ul class="main-menu">
                                 <li>
-                                    <a href="{{ path('products') }}">Shop</a>
+                                    <a href="{{ path('homepage')}}">Home</a>
                                 </li>
 
                                 <li>
-                                    <a href="{{ path('blog') }}">Blog</a>
+                                    <a href="{{ path('products')}}">Shop</a>
                                 </li>
 
                                 <li>
-                                    <a href="{{ path('about') }}">About</a>
+                                    <a href="{{ path('blog')}}">Blog</a>
                                 </li>
 
                                 <li>
-                                    <a href="{{ path('contact') }}">Contact</a>
+                                    <a href="{{ path('about')}}">About</a>
+                                </li>
+
+                                <li>
+                                    <a href="{{ path('contact')}}">Contact</a>
                                 </li>
                             </ul>
                         </div>  
 
                         <!-- Icon header -->
-                        <div class="wrap-icon-header flex-w flex-r-m">
-                            <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-                                <i class="zmdi zmdi-search"></i>
+                        <div class="wrap-icon-header flex-w flex-r-m h-full">
+                            <div class="flex-c-m h-full p-r-24">
+                                <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 js-show-modal-search">
+                                    <i class="zmdi zmdi-search"></i>
+                                </div>
                             </div>
-
-                            <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="{{app.session.get('cart_items')|length}}">
-                                <a class="icon-cart" href="{{ path('cart')}}">
-                                    <i class="zmdi zmdi-shopping-cart"></i>
-                                </a>
+                                
+                            <div class="flex-c-m h-full p-l-18 p-r-25 bor5">
+                                <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="{{app.session.get('cart_items')|length}}">
+                                    <a href="{{ path('cart') }}">
+                                        <i class="zmdi zmdi-shopping-cart icon-cart"></i>
+                                    </a>
+                                </div>
                             </div>
-
-                            {# <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
-                                <i class="zmdi zmdi-favorite-outline"></i>
-                            </a> #}
+                                
+                            <div class="flex-c-m h-full p-lr-19">
+                                <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11">
+                                    <a href="{{ path('fos_user_profile_show') }}">
+                                        <i class="zmdi zmdi-account icon-account"></i>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </nav>
                 </div>  
@@ -87,22 +76,32 @@
             <div class="wrap-header-mobile">
                 <!-- Logo moblie -->        
                 <div class="logo-mobile">
-                    <a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+                    <a href="{{ path('homepage') }}"><img src="{{ asset('images/logo.png')}}" alt="Ineluctable"></a>
                 </div>
 
                 <!-- Icon header -->
-                <div class="wrap-icon-header flex-w flex-r-m m-r-15">
-                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
-                        <i class="zmdi zmdi-search"></i>
+                <div class="wrap-icon-header flex-w flex-r-m h-full m-r-15">
+                    <div class="flex-c-m h-full p-r-10">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 js-show-modal-search">
+                            <i class="zmdi zmdi-search"></i>
+                        </div>
                     </div>
 
-                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="{{app.session.get('cart_items')|length}}">
-                        <i class="zmdi zmdi-shopping-cart"></i>
+                    <div class="flex-c-m h-full p-lr-10 bor5">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="{{app.session.get('cart_items')|length}}">
+                            <a href="{{ path('cart') }}">
+                                <i class="zmdi zmdi-shopping-cart icon-cart"></i>
+                            </a>
+                        </div>
                     </div>
 
-                    {# <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
-                        <i class="zmdi zmdi-favorite-outline"></i>
-                    </a> #}
+                    <div class="flex-c-m h-full p-lr-10 bor5">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11">
+                            <a href="{{ path('fos_user_profile_show') }}">
+                                <i class="zmdi zmdi-account icon-account"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Button show menu -->
@@ -116,57 +115,25 @@
 
             <!-- Menu Mobile -->
             <div class="menu-mobile">
-                <ul class="topbar-mobile">
-                    <li>
-                        <div class="left-top-bar">
-                            Free shipping for standard order over $100
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="right-top-bar flex-w h-full">
-                            <a href="#" class="flex-c-m p-lr-10 trans-04">
-                                Help & FAQs
-                            </a>
-
-                            <a href="#" class="flex-c-m p-lr-10 trans-04">
-                                My Account
-                            </a>
-
-                            <a href="#" class="flex-c-m p-lr-10 trans-04">
-                                EN
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-
                 <ul class="main-menu-m">
-{#                     <li>
-                        <a href="index.html">Home</a>
-                        <ul class="sub-menu-m">
-                            <li><a href="index.html">Homepage 1</a></li>
-                            <li><a href="home-02.html">Homepage 2</a></li>
-                            <li><a href="home-03.html">Homepage 3</a></li>
-                        </ul>
-                        <span class="arrow-main-menu-m">
-                            <i class="fa fa-angle-right" aria-hidden="true"></i>
-                        </span>
-                    </li> #}
-
                     <li>
-                        <a href="{{ path('products') }}">Shop</a>
+                        <a href="{{ path('homepage')}}">Home</a>
                     </li>
 
                     <li>
-                        <a href="{{ path('blog') }}">Blog</a>
+                        <a href="{{ path('products')}}">Shop</a>
                     </li>
 
                     <li>
-                        <a href="{{ path('about') }}">About</a>
+                        <a href="{{ path('blog')}}">Blog</a>
                     </li>
 
                     <li>
-                        <a href="{{ path('contact') }}">Contact</a>
+                        <a href="{{ path('about')}}">About</a>
+                    </li>
+
+                    <li>
+                        <a href="{{ path('contact')}}">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -195,35 +162,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-lg-3 p-b-50">
-                        <h4 class="stext-301 cl0 p-b-30">
-                            Categories
-                        </h4>
-
-                        <ul> 
-                            <li class="p-b-10">
-                                <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                    Women
-                                </a>
-                            </li>
-
-                            <li class="p-b-10">
-                                <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                    Men
-                                </a>
-                            </li>
-
-                            <li class="p-b-10">
-                                <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                    Shoes
-                                </a>
-                            </li>
-
-                            <li class="p-b-10">
-                                <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                    Watches
-                                </a>
-                            </li>
-                        </ul>
+                        {{  render(controller(
+                            'App\\Controller\\CategoryProductController::listAction'
+                            )) 
+                        }}
                     </div>
 
                     <div class="col-sm-6 col-lg-3 p-b-50">
