--- a/templates/shoping-cart.html.twig
+++ b/templates/shoping-cart.html.twig
@@ -2,10 +2,17 @@
 
 {% block body %}
 
+<!-- Title page -->
+<section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('images/bg-01.jpg');">
+	<h2 class="ltext-105 cl0 txt-center">
+		Cart
+	</h2>
+</section>	
+
 <!-- breadcrumb -->
 <div class="container" style="margin-top: 80px;">
 	<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-		<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
+		<a href="{{ path('homepage') }}" class="stext-109 cl8 hov-cl1 trans-04">
 			Home
 			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 		</a>
@@ -57,10 +64,10 @@
 												<i class="fs-16 zmdi zmdi-plus"></i>
 											</div>
 										</div>
+										<a class="remove-item" href="{{ path('cart_remove', {id: orderProduct.id})}}"><i class="fs-16 zmdi zmdi-delete"></i></a>
 									</td>
 									<td class="column-5">
 										$ <span class="total-product-price">{{ orderProduct.product.price * orderProduct.quantity }}</span>
-										<a class="remove-item" href="{{ path('cart_remove', {id: orderProduct.id})}}">X</a>
 									</td>
 								</tr>
 							{% endfor %} 
