--- a/src/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/src/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -19,8 +19,8 @@
                 <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="password" id="password" name="_password" required="required" placeholder="Password"/>
             </div>
             <div class="m-b-20 how-pos4-parent">
-                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                <label for="remember_me" class="remember_me_label">{{ 'security.login.remember_me'|trans }}</label>
+                <input type="checkbox" id="remember_me" class="remember_me" name="_remember_me" value="on" />
             </div>
             <input type="submit" class="login login-submit flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
         </form>
