--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -154,15 +154,18 @@
 										{{ product.name }}
 									</a>
 
-									<span class="stext-105 cl3">
+									{# <span class="stext-105 cl3">
 										${{ product.price }}
-									</span>
+									</span> #}
 								</div>
 
 								<div class="block2-txt-child2 flex-r p-t-3">
-									<a class="btn-addwish-b2 dis-block pos-relative icon-cart js-addcart-detail" data-product="{{ product.id }}">
+									<span class="stext-105 cl3">
+										${{ product.price }}
+									</span>
+									{# <a class="btn-addwish-b2 dis-block pos-relative icon-cart js-addcart-detail" data-product="{{ product.id }}">
 										<i class="zmdi zmdi-shopping-cart"></i>
-									</a>
+									</a> #}
 								</div>
 							</div>
 						</div>
