--- a/templates/products.html.twig
+++ b/templates/products.html.twig
@@ -274,15 +274,18 @@
 									{{ product.name }}
 								</a>
 
-								<span class="stext-105 cl3">
+								{# <span class="stext-105 cl3">
 									${{ product.price }}
-								</span>
+								</span> #}
 							</div>
 
 							<div class="block2-txt-child2 flex-r p-t-3">
-								<a class="btn-addwish-b2 dis-block pos-relative icon-cart js-addcart-detail" data-product="{{ product.id }}">
+								<span class="stext-105 cl3">
+									${{ product.price }}
+								</span>
+								{# <a class="btn-addwish-b2 dis-block pos-relative icon-cart js-addcart-detail" data-product="{{ product.id }}">
 									<i class="zmdi zmdi-shopping-cart"></i>
-								</a>
+								</a> #}
 {# 								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
 									<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
 									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
@@ -295,11 +298,11 @@
 		</div>
 
 		<!-- Load more -->
-		<div class="flex-c-m flex-w w-full p-t-45">
+		{# <div class="flex-c-m flex-w w-full p-t-45">
 			<a href="#" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04" id="load">
 				Load More
 			</a>
-		</div>
+		</div> #}
 	</div>
 </div>
 {% endblock %}
