add search in product/blog

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -44,6 +44,15 @@
 	color: green;
 }
 
-.isotope-item {
-	// display: none;
+.search-word {
+	color : #717fe0
+}
+
+.search-results {
+	text-align: center; 
+	width: 100%;
+}
+
+.search-title-modal {
+	margin-bottom: 10px;
 }
