--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -141,11 +141,12 @@
             <!-- Modal Search -->
             <div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
                 <div class="container-search-header">
+                    <h3 class="search-title-modal">Search Blogs or Products</h3>
                     <button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
                         <img src="images/icons/icon-close2.png" alt="CLOSE">
                     </button>
 
-                    <form class="wrap-search-header flex-w p-l-15">
+                    <form class="wrap-search-header flex-w p-l-15" action="{{ path('search')}}" method="post">
                         <button class="flex-c-m trans-04">
                             <i class="zmdi zmdi-search"></i>
                         </button>
