--- a/templates/product-detail.html.twig
+++ b/templates/product-detail.html.twig
@@ -10,7 +10,7 @@
 			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 		</a>
 
-		<a href="{{ path('products') }}" class="stext-109 cl8 hov-cl1 trans-04">
+		<a href="{{ path('products', {current_category : product.category.name}) }}" class="stext-109 cl8 hov-cl1 trans-04">
 			{{ product.category.name }}
 			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 		</a>
