add upload file in tinyMce

--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -1,6 +1,10 @@
 .bg-img1 {
 	background-image: url('../images/bg-02.jpg');
 }
+.list-blog-img {
+	height: 500px;
+    object-fit: cover;
+}
 
 .paginate-container {
 	justify-content: center;
