--- a/templates/layout-blog.html.twig
+++ b/templates/layout-blog.html.twig
@@ -49,15 +49,17 @@
 							{% for product in products %}
 								<li class="flex-w flex-t p-b-30">
 									<a href="{{ path('product_detail', {id : product.id}) }}" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-										{% for img in product.gallery.galleryHasMedias %}
-											{% if loop.index == 1 %}
-											    <img src="{% path img.media, 'small' %}" alt="{{ product.name }}">
-											{% endif %}
-										{% endfor %}
+										{% if product.gallery %}
+											{% for img in product.gallery.galleryHasMedias %}
+												{% if loop.index == 1 %}
+												    <img src="{% path img.media, 'small' %}" alt="{{ product.name }}">
+												{% endif %}
+											{% endfor %}
+										{% endif %}
 									</a>
 
 									<div class="size-215 flex-col-t p-t-8">
-										<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
+										<a href="{{ path('product_detail', {id : product.id}) }}" class="stext-116 cl8 hov-cl1 trans-04">
 											{{ product.name }}
 										</a>
 
