fake dropdown shop

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,32 @@
 
                                 <li>
                                     <a href="{{ path('products')}}">Shop</a>
+                                    <ul class="sub-menu">
+                                        <li>
+                                            <a href="#">Bijoux</a>
+                                            <ul class="sub-menu-sub">
+                                                <li><a href="#">Boucle d'oreille</a></li>
+                                                <li><a href="#">Raz de Cou</a></li>
+                                                <li><a href="#">Perle</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="home-02.html">Décoration</a>
+                                            <ul class="sub-menu-sub">
+                                                <li><a href="#">Bracelet</a></li>
+                                                <li><a href="#">Collier</a></li>
+                                                <li><a href="#">Bague</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="home-03.html">Home</a>
+                                            <ul class="sub-menu-sub">
+                                                <li><a href="#">Anneaux</a></li>
+                                                <li><a href="#">Pouet</a></li>
+                                                <li><a href="#">Truc</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </li>
 
                                 <li>
