--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -56,3 +56,22 @@
 .search-title-modal {
 	margin-bottom: 10px;
 }
+
+.sub-menu {
+	width: 530px;
+	max-width: none;
+	& > li {
+		width: 175px;
+		display: inline-block;
+		float: left;
+		& > a {
+			font-weight: bold;
+			font-size: 16px;
+		}
+		.sub-menu-sub {
+			& > li {
+				display: block;
+			}
+		}
+	}	
+}
