start edit profile

--- a/templates/shoping-cart.html.twig
+++ b/templates/shoping-cart.html.twig
@@ -144,8 +144,9 @@
 								<div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
 									<select class="js-select2" name="time">
 										<option>Select a country...</option>
-										<option>USA</option>
-										<option>UK</option>
+										{% for key, country in countries %}
+											<option value="{{key}}">{{country}}</option>
+										{% endfor %}
 									</select>
 									<div class="dropDownSelect2"></div>
 								</div>
