--- a/src/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/src/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -3,8 +3,54 @@
 
 {% block fos_user_content %}
     <div class="fos_user_user_show">
+    	<br>
         <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
         <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
-        <p>name: {{ user.fullName }}</p>
+        <br>
+        <div class="row">
+	        {% if user.address %}
+	        	<div class="col-12 col-md-6">
+			        <h4>Address</h4>
+			        <p>{{ user.fullName }}</p>
+			        <p>{{ user.address.address }}</p>
+			        <p>{{ user.address.city }} / {{ user.address.zipcode }}</p>
+			        <p>{{ user.address.country }}</p>
+			    </div>
+	        {% endif %}
+	        {% if user.addressBilling %}
+	        	<div class="col-12 col-md-6">
+			        <h4>Address Billing</h4>
+			        <p>{{ user.fullName }}</p>
+			        <p>{{ user.addressBilling.address }}</p>
+			        <p>{{ user.addressBilling.city }} / {{ user.addressBilling.zipcode }}</p>
+			        <p>{{ user.addressBilling.country }}</p>
+			    </div>
+	        {% endif %}
+    	</div>
+        <br>
+        {% if user.orders|length %}
+	        <h4>Orders</h4>
+	        <br>
+	        <table class="table table-stripped">
+	        	<tbody>
+	        		<tr>
+	        			<th>Number</th>
+	        			<th>Status</th>
+	        			<th>Date</th>
+	        			<th>Total</th>
+	        			<th>Action</th>
+	        		</tr>
+	        		{% for order in user.orders %}
+		        		<tr>
+		        			<td>{{ order.uniqId }}</td>
+		        			<td>{{ order.state }}</td>
+		        			<td>{{ order.createdAt|date("d/m/Y")}}</td>
+		        			<td>{{ order.total }} €</td>
+		        			<td><a href="">Detail</a></td>
+		        		</tr>
+		        	{% endfor %}
+	        	</tbody>
+	        </table>
+	    {% endif %}
     </div>
 {% endblock fos_user_content %}
