--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -311,6 +311,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="{{ asset('build/manifest.js') }}"></script>
         <script src="{{ asset('build/vendor.js') }}"></script>
+        <script src="{{ asset('build/js/instagram-feed.js') }}"></script>
         <script src="{{ asset('build/js/animsition.js') }}"></script>
         <script src="{{ asset('build/js/bootstrap.js') }}"></script>
         <script src="{{ asset('build/js/select2.js') }}"></script>
