add user in send mail newsletter

--- a/src/Resources/FOSUserBundle/views/CRUD/list__action_mail.html.twig
+++ b/src/Resources/FOSUserBundle/views/CRUD/list__action_mail.html.twig
@@ -1,1 +1,1 @@
-<a class="btn btn-sm" href="{{ admin.generateObjectUrl('mail', object) }}">mail</a>
+<a class="btn btn-sm" style="padding:10px; background-color:green; color: white;" href="{{ admin.generateObjectUrl('mail', object) }}">Send by Mail</a>
