--- a/src/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/src/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -35,6 +35,9 @@
 					<div class="bor8 m-b-20 how-pos4-parent">
 						{{ form_widget(form.lastName, { 'attr': {'class': 'stext-111 cl2 plh3 size-116 p-l-62 p-r-30', 'placeholder' : 'Lastname'} }) }}
 					</div>
+
+						{{ form_label(form.haveSubscribeNewsletter, null, { 'label_attr' : {'style' : 'display:inline-block' }}) }}
+						{{ form_widget(form.haveSubscribeNewsletter, { 'attr' : {'style' : 'margin-left: 10px;display:inline-block;' }}) }}
 			</div>
 		</div>
 		<div class="flex-w flex-tr">
